Bug#36700 - Found while running the new scavenger with falcon_bug_28048.  The variable neededByAnyActiveTrans in RecordVersion::retire() was set incorrectly. So retireRecords did not work correctly.